增加bcrypt  舍弃之前md5不安全的加密方法
