# docs/swagger.yaml
@@ -60,6 +60,25 @@ paths:
       summary: 删除用户
       tags:
       - 用户模块
+  /user/findUserByNameAndPwd:
+    post:
+      parameters:
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      responses:
+        "200":
+          description: code","message"}
+          schema:
+            type: string
+      summary: 所有用户
+      tags:
+      - 用户模块
   /user/updateUser:
     post:
       parameters:
