# router/app.go
@@ -26,5 +26,7 @@ func Router() *gin.Engine {
 	r.GET("/user/deleteUser", service.DeleteUser)
 
 	r.POST("/user/updateUser", service.UpdateUser)
+	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
+
 	return r
 }
