# service/userservice.go
@@ -51,7 +51,7 @@ func CreateUser(c *gin.Context) {
 		})
 		return
 	}
-	hashedPassword := utils.MakePassword(password, "")
+	hashedPassword := utils.MakePassword(password)
 	user.Password = hashedPassword
 	fmt.Printf("原始密码: %s\n", password)
 	fmt.Printf("Bcrypt加密后: %s\n", hashedPassword)
@@ -68,18 +68,79 @@ func CreateUser(c *gin.Context) {
 // @param name query string false "用户名"
 // @param password query string false "密码"
 // @Success 200 {string} json{"code","message"}
-// @Router /user/GetUserList [get]
+// @Router /user/findUserByNameAndPwd [post]
 func FindUserByNameAndPwd(c *gin.Context) {
-	data := models.UserBasic{}
-	name = c.Query("name")
+	name := c.Query("name")
 	password := c.Query("password")
-	data
+
+	// 参数验证
+	if name == "" || password == "" {
+		c.JSON(400, gin.H{
+			"code":    400,
+			"message": "用户名和密码不能为空",
+		})
+		return
+	}
+
+	// 查找用户
+	user := models.FindUserByName(name)
+	if user.Name == "" {
+		c.JSON(200, gin.H{
+			"code":    404,
+			"message": "用户不存在",
+		})
+		return
+	}
+
+	// 验证密码
+	flag := utils.ValidPassword(password, user.Password)
+	if !flag {
+		c.JSON(200, gin.H{
+			"code":    401,
+			"message": "密码错误",
+		})
+		return
+	}
+
+	// 返回用户信息（排除敏感字段）
+	userResponse := gin.H{
+		"identity": user.Identity,
+		"name":     user.Name,
+		// 其他需要返回的字段，但不包括密码
+	}
 
 	c.JSON(200, gin.H{
-		"message": data,
+		"code":    200,
+		"message": "登录成功",
+		"data":    userResponse,
 	})
-
 }
+
+//func FindUserByNameAndPwd(c *gin.Context) {
+//	data := models.UserBasic{}
+//	name := c.Query("name")
+//	password := c.Query("password")
+//	user := models.FindUserByName(name)
+//	if user.Identity == "" {
+//		c.JSON(200, gin.H{
+//			"message": "该用户不存在",
+//		})
+//	}
+//	flag := utils.ValidPassword(password, user.Password)
+//	if !flag {
+//		c.JSON(200, gin.H{
+//			"message": "mima",
+//		})
+//
+//	}
+//
+//	data = models.FindUserByNameAndPwd(name, password)
+//
+//	c.JSON(200, gin.H{
+//		"message": data,
+//	})
+//
+//}
 
 // DeleteUser
 // @Summary 删除用户
